[package]
name = "rztc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zt = { path = "zt" }
mio = { version = "0.8", features = ["default", "os-poll", "net"] }
failure = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "3.1", features = ["derive"] }
ipnetwork = "0.18"
sha2 = "0.10"
