[package]
name = "zt"
version = "0.1.0"
edition = "2021"

[lib]
name = "zt"
path = "src/lib.rs"

[dependencies]
zt-sys = { path = "zt-sys" }
libc = "0.2"
ed25519-dalek = "1.0"
x25519-dalek = "1.2"
rand = "0.7"
hex = "0.4"
failure = "0.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pnet_sys = "0.29"
arrayref = "0.3"
sha2 = "0.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
ipnetwork = "0.18"
